<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/modify_mission"
        android:orderInCategory="100"
        android:title="@string/popup_mission_modify" />

    <item
        android:id="@+id/export_mission"
        android:orderInCategory="100"
        android:title="@string/popup_mission_export">

            <menu xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto">
                <item
                    android:id="@+id/export_csv"
                    android:orderInCategory="100"
                    android:title="@string/popup_export_csv" />

                <item
                    android:id="@+id/export_xml"
                    android:orderInCategory="100"
                    android:title="@string/popup_export_xls" />

                <item
                    android:id="@+id/export_xls"
                    android:orderInCategory="100"
                    android:title="@string/popup_export_xml" />

            </menu>
    </item>

    <item
        android:id="@+id/close_mission"
        android:orderInCategory="100"
        android:title="@string/popup_mission_close" />

    <item
        android:id="@+id/delete_mission"
        android:orderInCategory="100"
        android:title="@string/popup_mission_delete" />

</menu>