<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nicoladalmaso.gruppo1.BillViewer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_missionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_missionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textColor="#fff"
                android:textSize="22sp"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_missionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_missionLocation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/location"
                android:inputType="textCapWords"
                android:textColor="#fff"
                android:singleLine="true"
                android:textSize="22sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_missionStart"
                android:layout_marginTop="45dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    app:srcCompat="@drawable/ic_date_range_white_48px" />

                <TextView
                    android:id="@+id/input_missionStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:text="@string/dateStart"
                    android:textColor="#fff"
                    android:textSize="26sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_missionFinish"
                android:layout_marginTop="45dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    app:srcCompat="@drawable/ic_date_range_white_48px" />

                <TextView
                    android:id="@+id/input_missionFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:text="@string/dateFinish"
                    android:textColor="#fff"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>