<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nicoladalmaso.gruppo1.EditMission">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgNumPersone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:singleLine="true"
                    android:text="@string/text_numPerson"
                    android:textSize="20dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgNumActiveMission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:singleLine="true"
                    android:text="@string/text_activeMission"
                    android:textSize="20dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgNumCloseMission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:singleLine="true"
                    android:text="@string/text_closeMission"
                    android:textSize="20dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgNumTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:singleLine="true"
                    android:text="@string/text_ticket"
                    android:textSize="20dp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>